--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   /* width: 780px; */
-  width: 100%;
+  /* width: 100%; */
   margin: 0 auto;
 }
 /* Full width for the dashboard */
