--- a/src/components/UserDashboard/UserDashboard.css
+++ b/src/components/UserDashboard/UserDashboard.css
@@ -4,18 +4,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f5f5f5; /* Light background color */
+    background-color: #f5f5f5;
     padding: 20px;
     font-family: Arial, sans-serif;
 }
 
 /* Card styling */
 .dashboard-card {
-    background-color: #ffffff; /* White card background */
-    border-radius: 12px;
+    background-color: #ffffff;
+    border-radius: 5px;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1); /* Subtle shadow */
     padding: 20px;
-    width: 500px; /* Adjusted width for better layout */
+    width: 100%; /* Adjusted width for better layout */
     text-align: center;
     overflow: hidden;
 }
